<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/fondo"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/lblMainTitle"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="#ffdadbda"/>


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lblMainTitle">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/YourCosts"
                android:id="@+id/lblCostos"
                android:layout_column="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txfCosts"
                android:layout_column="2"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/clientType"
                android:id="@+id/lblClient"
                android:layout_column="1" />

            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/barClient"
                android:max="3"
                android:progress="1"
                android:layout_column="2"
                android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
                android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/prestigeValue"
                android:id="@+id/lblPrestige"
                android:layout_column="1"/>

            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/barPrestige"
                android:max="4"
                android:progress="1"
                android:layout_column="2"
                android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
                android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/projectImpact"
                android:id="@+id/lblImpact"
                android:layout_column="1" />

            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/barImpact"
                android:max="4"
                android:progress="1"
                android:layout_column="2"
                android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
                android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"/>

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/competition"
                android:id="@+id/lblCompetition"
                android:layout_column="1" />

            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/barCompetition"
                android:max="4"
                android:progress="1"
                android:layout_column="2"
                android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
                android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/lblItemDescription"
                android:gravity="center|center_vertical"
                android:layout_column="1"
                android:layout_span="2" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/lblResult"
                android:gravity="center|center_vertical"
                android:layout_column="1"
                android:layout_span="2" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
